--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,8 @@ status = "actively-developed"
 [dependencies.clippy]
 version = "0.0"
 optional = true
+
+[target.'cfg(windows)'.dependencies.winapi]
+git = "https://github.com/retep998/winapi-rs.git"
+branch = "dev"
+features = ["errhandlingapi"]
