--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ optional = true
 
 [target.'cfg(unix)'.dependencies.libc]
 version = "0.2"
+default-features = false
 
 [target.'cfg(target_os = "dragonfly")'.dependencies.dragonfly-errno]
 path = "dragonfly-errno"
