--- a/dragonfly-errno/Cargo.toml
+++ b/dragonfly-errno/Cargo.toml
@@ -29,5 +29,9 @@ status = "actively-developed"
 version = "0.0"
 optional = true
 
-[target.'cfg(target_os = "dragonfly")'.build-dependencies]
-cc = "1"
+[target.'cfg(target_os = "dragonfly")'.dependencies.libc]
+version = "0.2"
+default-features = false
+
+[target.'cfg(target_os = "dragonfly")'.build-dependencies.cc]
+version = "1"
